--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rust-gmp = "*"
-rand = "*"
+num-traits = "0.2.14"
+num-bigint = { version = "0.4", features = ["rand"] }
+rand = "0.8"
 clap = { version = "3.1.5" }
